opam-version: "2.0"
maintainer: "ericfinster@gmail.com"
authors: ["Eric Finster"]
synopsis: "A library for manipulating opetopes"
homepage: "https://github.com/ericfinster/opetopes"
bug-reports: "https://github.com/ericfinster/opetopes/issues"
dev-repo: "git://github.com/ericfinster/opetopes.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
  
depends: [
  "dune" {build}
]
